--- a/frontend/src/app/pages/profesor/pevaestud/pevaestud.component.html
+++ b/frontend/src/app/pages/profesor/pevaestud/pevaestud.component.html
@@ -1,1 +1,361 @@
-<p>pevaestud works!</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <!-- Favicon -->
+    <link href="./assets/img/brand/favicon.png" rel="icon" type="image/png">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <!-- Icons -->
+
+    <link href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Argon CSS -->
+    <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
+</head>
+
+<body>
+    <!-- Sidenav -->
+    <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
+        <div class="container-fluid">
+            <!-- Toggler -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+            <!--  Logo -->
+            <a class="navbar-brand pt-4">
+                <img src="../assets/img/brand/admin.png" width="80" height="400" class="navbar-brand-img" alt="...">
+            </a>
+
+
+            <!-- Collapse -->
+            <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+                <!-- Collapse header -->
+                <div class="navbar-collapse-header d-md-none">
+                    <div class="row">
+
+                    </div>
+                </div>
+
+                <!-- Navigation -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/profesor']">
+                            <i class="ni ni-tv-2 text-primary"></i> Inicio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/profesor']">
+                            <i class="ni ni-single-02 text-yellow"></i> Evaluaciones
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/login']">
+                            <i class="ni ni-key-25 text-info"></i> Cerrar Sesion
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- Divider -->
+                <hr class="my-3">
+            </div>
+        </div>
+    </nav>
+
+
+
+    <!-- Main content -->
+    <div class="main-content">
+        <!-- Top navbar -->
+        <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+            <!-- Brand -->
+
+
+
+            <div class="dropdown ">
+                <button class="dropbtn btn btn-primary dropdown-toggle" data-toggle="dropdown">Grupos</button>
+                <div class="dropdown-content">
+                    <a [routerLink]="['/profesor2']">A</a>
+                    <a [routerLink]="['/profesor2']">B</a>
+                    <a [routerLink]="['/profesor2']">C</a>
+                </div>
+            </div>
+
+
+
+            <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
+                <div class="form-group mb-0">
+                    <div class="input-group input-group-alternative">
+
+
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-search"></i></span>
+                        </div>
+
+                        <input class="form-control" placeholder="Search" type="text">
+                    </div>
+                </div>
+            </form>
+
+
+        </nav>
+        <!-- Header -->
+        <div class="pimg1">
+            <div class="ptext">
+                <span class="border trans">
+                            Evaluaciónes por Estudiantes
+                        </span>
+            </div>
+        </div>
+
+        <!-- Formulario  -->
+
+
+
+        <!--  Segundo formulario   -->
+
+
+        <!-- Dark table -->
+        <div class="row mt-4">
+            <div class="col">
+                <div class="card bg-default shadow">
+                    <div class="card-header bg-transparent border-0">
+                        <h3 class="text-white mb-0">Evaluación por Estudiantes</h3>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table align-items-center table-dark table-flush">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Estudiante</th>
+                                    <th scope="col">Tema</th>
+                                    <th scope="col">Unidad</th>
+                                    <th scope="col">Puntuación Maxima</th>
+                                    <th scope="col">Puntuación Obtenida</th>
+                                    <!-- <th scope="col">Completion</th> -->
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <a href="#" class="avatar rounded-circle mr-3">
+                                                <img alt="Image placeholder" src="../assets/img/theme/h.jpg">
+                                            </a>
+                                            <div class="media-body">
+                                                <span class="mb-0 text-sm">Juan Perez</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <td>
+                                        <span class="badge badge-dot mr-4">
+                        <i class="bg-warning"></i>Conjunto de los números irracionales
+                      </span>
+
+                                    </td>
+                                    <td>
+                                        <span class="badge badge-dot mr-4">
+                        <i class="bg-warning"></i>  1
+                      </span>
+
+                                    </td>
+
+
+
+
+                                    <!-- ¿Cuantos estudiantes hay estudiantes? -->
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-warning"></i> 100
+                                              </span>
+                                            <div>
+
+                                            </div>
+                                        </div>
+                                    </td>
+
+
+                                    <!--    nota obtenida -->
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-warning"></i>100
+                                              </span>
+                                            <div>
+
+                                            </div>
+                                        </div>
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <a href="#" class="avatar rounded-circle mr-3">
+                                                <img alt="Image placeholder" src="../assets/img/theme/h.jpg">
+                                            </a>
+                                            <div class="media-body">
+                                                <span class="mb-0 text-sm">Gabriel chon</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <td>
+                                        <span class="badge badge-dot">
+                        <i class="bg-success"></i> Concepto de potenciación
+                      </span>
+                                    </td>
+
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-warning"></i> 2
+                                              </span>
+                                            <div>
+
+                                            </div>
+                                        </div>
+                                    </td>
+
+                                    <td>
+                                        <span class="badge badge-dot mr-4">
+                        <i class="bg-warning"></i> 100
+                      </span>
+
+                                    </td>
+
+                                    <!--    nota obtenida -->
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-warning"></i> 70
+                                              </span>
+                                            <div>
+
+                                            </div>
+                                        </div>
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <a href="#" class="avatar rounded-circle mr-3">
+                                                <img alt="Image placeholder" src="../assets/img/theme/m.jpg">
+                                            </a>
+                                            <div class="media-body">
+                                                <span class="mb-0 text-sm">Alicia Zolis</span>
+                                            </div>
+                                        </div>
+                                    </th>
+
+                                    <td>
+                                        <span class="badge badge-dot mr-4">
+                        <i class="bg-danger"></i>Monomios semejantes y su reducción
+                      </span>
+                                    </td>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <span class="badge badge-dot mr-4">
+                                                <i class="bg-warning"></i> 3
+                                              </span>
+                                            <div>
+
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <span class="badge badge-dot mr-4">
+                        <i class="bg-warning"></i> 100
+                      </span>
+
+                                    </td>
+
+                                    <!--    nota obtenida -->
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <span class="badge badge-dot mr-4">
+                                            <i class="bg-warning"></i> 90
+                                          </span>
+                                            <div>
+
+                                            </div>
+                                        </div>
+                                    </td>
+
+                                </tr>
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="card-footer py-4">
+                        <nav aria-label="...">
+                            <ul class="pagination justify-content-end mb-0">
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1">
+                                        <i class="fas fa-angle-left"></i>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link">1</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link">2 <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="page-item"><a class="page-link">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-angle-right"></i>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <br>
+
+
+        <hr>
+
+        <!-- Fin Tarjetas del profesor   -->
+        <nav aria-label="Page navigation example ">
+            <ul class="pagination pg-blue justify-content-center ">
+                <li class="page-item ">
+                    <a [routerLink]="['/profesor']" routerLinkActive="router-link-active" class="page-link ">Anterior</a>
+                </li>
+            </ul>
+        </nav>
+
+
+
+
+        <!-- Footer -->
+        <footer class="footer">
+
+            <div class="footer-copyright text-center py-3">© 2019 Copyright
+
+            </div>
+        </footer>
+    </div>
+
+    <!-- Argon Scripts -->
+    <!-- Core -->
+    <script src="./assets/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Optional JS -->
+    <script src="./assets/vendor/chart.js/dist/Chart.min.js"></script>
+    <script src="./assets/vendor/chart.js/dist/Chart.extension.js"></script>
+    <!-- Argon JS -->
+    <script src="./assets/js/argon.js?v=1.0.0"></script>
+</body>
+
+</html>
