--- a/frontend/src/app/pages/profesor/profesor.component.html
+++ b/frontend/src/app/pages/profesor/profesor.component.html
@@ -1,1 +1,209 @@
-<p>profesor works!</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <!-- Favicon -->
+    <link href="./assets/img/brand/favicon.png" rel="icon" type="image/png">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <!-- Icons -->
+
+    <link href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Argon CSS -->
+    <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
+</head>
+
+<body>
+    <!-- Sidenav -->
+    <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
+        <div class="container-fluid">
+            <!-- Toggler -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+            <!--  Logo -->
+            <a class="navbar-brand pt-0" href="./index.html">
+                <img src="./assets/img/brand/S1.png" class="navbar-brand-img" alt="...">
+            </a>
+
+            <!-- Collapse -->
+            <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+                <!-- Collapse header -->
+                <div class="navbar-collapse-header d-md-none">
+                    <div class="row">
+
+                    </div>
+                </div>
+
+                <!-- Navigation -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/profesor']">
+                            <i class="ni ni-tv-2 text-primary"></i> Bienvenido {{usuarios.nombre}}
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/profesor']">
+                            <i class="ni ni-single-02 text-yellow"></i> Evaluaciones
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/login']">
+                            <i class="ni ni-key-25 text-info"></i> Cerrar Sesion
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- Divider -->
+                <hr class="my-3">
+
+
+            </div>
+        </div>
+    </nav>
+
+
+
+    <!-- Main content -->
+    <div class="main-content">
+        <!-- Top navbar -->
+        <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+        </nav>
+        <!-- Header -->
+        <div class="pimg1">
+            <div class="ptext">
+                <span class="border trans bg-success mb-3">
+                            Calificaciones
+                        </span>
+            </div>
+        </div>
+
+        <br>
+
+        <!--  Tarjetas del profesor   -->
+
+        <!-- Grid row -->
+        <div class="row d-flex justify-content-center">
+
+            <!-- Grid column -->
+            <div class="col-md-6 col-xl-5 mb-4">
+                <!--Featured image-->
+
+
+                <!-- Card Dark -->
+                <div class="card">
+
+                    <!-- Card image -->
+                    <div class="view overlay">
+                        <a>
+                            <div class="mask sunny-morning-gradient
+                        "></div>
+                        </a>
+                    </div>
+
+
+                    <!--Panel-->
+
+
+
+                    <div class="card text-center ">
+                        <div class=" card-header bg-success mb-3 white-text ">
+
+                        </div>
+                        <div class="card-body ">
+                            <h4 class="card-title ">Evaluciones por tema</h4>
+                            <hr class="hr">
+                            <!-- <p class="card-text ">With supporting text below as a natural lead-in to additional content. </p>  -->
+                            <a [routerLink]="['/temaprof']" class="btn btn-rounded btn-md ">Ver más</a>
+                        </div>
+                        <div class="card-footer text-muted bg-success mb-3  white-text ">
+                            <p class="mb-0 "></p>
+                        </div>
+                    </div>
+                    <!--/.Panel-->
+
+
+                </div>
+
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-6 col-xl-5 mb-4">
+                <!--Featured image-->
+
+                <!-- Card Dark -->
+                <div class="card">
+
+                    <!-- Card image -->
+                    <div class="view overlay">
+                        <a>
+                            <div class="mask sunny-morning-gradient
+    "></div>
+                        </a>
+                    </div>
+
+
+                    <!--Panel-->
+                    <div class="card text-center">
+                        <div class=" card-header bg-success mb-3 white-text ">
+
+                        </div>
+                        <div class="card-body ">
+                            <h4 class="card-title ">Evaluciones por estudiantes</h4>
+                            <hr class="hr">
+                            <!-- <p class="card-text ">With supporting text below as a natural lead-in to additional content. </p>  -->
+                            <a [routerLink]="['/estudprof']" class="btn btn-rounded btn-md ">Ver más</a>
+                        </div>
+                        <div class="card-footer text-muted bg-success mb-3 white-text ">
+                            <p class="mb-0 "></p>
+                        </div>
+                    </div>
+                    <!--/.Panel-->
+
+
+                </div>
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+
+
+
+
+
+        <!-- Fin Tarjetas del profesor   -->
+
+
+        <!-- Footer -->
+        <footer class="footer">
+
+            <div class="footer-copyright text-center py-3" style="height: 10rem;">© 2019 Copyright
+
+            </div>
+        </footer>
+    </div>
+
+
+
+
+
+
+
+
+    <!-- Argon Scripts -->
+    <!-- Core -->
+    <script src="./assets/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Optional JS -->
+    <script src="./assets/vendor/chart.js/dist/Chart.min.js"></script>
+    <script src="./assets/vendor/chart.js/dist/Chart.extension.js"></script>
+    <!-- Argon JS -->
+    <script src="./assets/js/argon.js?v=1.0.0"></script>
+</body>
+
+</html>
