Graficas del Profesor

--- a/frontend/src/app/pages/profesor/pevaestud/pevaestud.component.html
+++ b/frontend/src/app/pages/profesor/pevaestud/pevaestud.component.html
@@ -326,17 +326,17 @@
 
         <hr>
 
-        <!-- Fin Tarjetas del profesor   -->
+        <app-grafica1></app-grafica1>
+        <br>
+        <br>
         <nav aria-label="Page navigation example ">
             <ul class="pagination pg-blue justify-content-center ">
                 <li class="page-item ">
-                    <a [routerLink]="['/profesor']" routerLinkActive="router-link-active" class="page-link ">Anterior</a>
+                    <button type="button" class="btn sunny-morning-gradient bbtn btn-lg"><a [routerLink]="['/profesor']">Regresar</a></button>
+
                 </li>
             </ul>
         </nav>
-
-
-
 
         <!-- Footer -->
         <footer class="footer">
