--- a/frontend/src/app/pages/profesor/pevatema/pevatema.component.html
+++ b/frontend/src/app/pages/profesor/pevatema/pevatema.component.html
@@ -310,13 +310,22 @@
 
 
         <br>
+        <br>
 
+
+
+
+
+        <app-grafica2></app-grafica2>
+        <br>
+        <br>
 
         <!-- Fin Tarjetas del profesor   -->
         <nav aria-label="Page navigation example ">
             <ul class="pagination pg-blue justify-content-center ">
                 <li class="page-item ">
-                    <a [routerLink]="['/profesor']" routerLinkActive="router-link-active" class="page-link ">Anterior</a>
+                    <button type="button" class="btn sunny-morning-gradient bbtn btn-lg"><a [routerLink]="['/profesor']">Regresar</a></button>
+
                 </li>
             </ul>
         </nav>
